base/src/test/resources/failure/patterns/issues/issue355.aya.txt
In file $FILE:6:4 ->

  4 |  | suc Nat
  5 | 
  6 | def addN (a : I) : Nat
          ^--^

Error: Cannot perform pattern matching `0`

1 error(s), 0 warning(s).
What are you doing?
